[product-catalog] add create/update product API spec
